openshift/grafana/grafana-standard.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    name: grafana-pvc
    namespace: grafana
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 5Gi # Anda bisa sesuaikan ukurannya
    storageClassName: standard-csi

- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: grafana-deployment
    namespace: grafana
    labels:
      app: grafana
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: grafana
    template:
      metadata:
        labels:
          app: grafana
      spec:
        containers:
          - name: grafana
            image: grafana/grafana:latest
            ports:
              - containerPort: 3000
            volumeMounts:
              - name: grafana-storage
                mountPath: /var/lib/grafana
        volumes:
          - name: grafana-storage
            persistentVolumeClaim:
              claimName: grafana-pvc

- apiVersion: v1
  kind: Service
  metadata:
    name: grafana-service
    namespace: grafana
  spec:
    selector:
      app: grafana
    ports:
      - protocol: TCP
        port: 3000
        targetPort: 3000

- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    name: grafana-route
    namespace: grafana
  spec:
    host: grafana-grafana-deployment.apps.ocp-one-gate-payment.skynux.fun
    to:
      kind: Service
      name: grafana-service
    port:
      targetPort: 3000
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
